--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gdeslon-webmaster-api",
+  "name": "gdeslonapi",
   "version": "1.1.0",
   "main": "GdeslonApi.js",
   "description": "gdeslon.ru API integration",
